--- a/app/modules/home/home.html
+++ b/app/modules/home/home.html
@@ -1,9 +1,5 @@
 <section class="home">
 
-  <h1> {{ test }} </h1>
-
-  <p>
-      <div demo-component></div>
-  </p>
+      <card-slider cs-deck="deck"></card-slider>
 
 </section>
